--- a/20 - Drawing Animations/index.html
+++ b/20 - Drawing Animations/index.html
@@ -3,12 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="duration" value="30"/>
-    <button id="start">Start</button>
-    <button id="pause">Pause</button>
+    <div class="timer">
+        <div class="controls">
+          <input id="duration" value="3" />
+          <div>
+            <button id="start"><i class="fas fa-play"></i></button>
+            <button id="pause"><i class="fas fa-pause"></i></button>
+          </div>
+        </div>
+    <svg height="400" width="400">
+        <circle
+         r="190"
+         cx="200"
+         cy="200"
+         fill="transparent"
+         stroke="blue"
+         stroke-width="15"
+         transform="rotate(-90 200 200)"
+        />
+    </svg>
     <script src="timer.js"></script>
     <script src="index.js"></script>
 </body>
