--- a/21 - Application Design Patterns/index.html
+++ b/21 - Application Design Patterns/index.html
@@ -28,7 +28,11 @@
         </div>
       </section>
 
-      <div class="container"></div>
+      <div class="container">
+          <input type="text">
+          <div id="target"></div>
+      </div>
+      <script src="utils.js"></script>
       <script src="index.js"></script>
 </body>
 </html>
