--- a/21 - Application Design Patterns/index.html
+++ b/21 - Application Design Patterns/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,8 +30,7 @@
       </section>
 
       <div class="container">
-          <input type="text">
-          <div id="target"></div>
+          <div class="autocomplete"></div>
       </div>
       <script src="utils.js"></script>
       <script src="index.js"></script>
