--- a/21 - Application Design Patterns/index.html
+++ b/21 - Application Design Patterns/index.html
@@ -29,9 +29,14 @@
   </section>
 
   <div class="container">
-    <div class="autocomplete"></div>
-    <div class="autocomplete1"></div>
-    <div id="sumary"></div>
+    <div class="columns">
+      <div class="column"><div id="autocomplete"></div></div>
+      <div class="column"><div id="autocomplete1"></div></div>
+    </div>
+    <div class="column is-half notification is-primary tutorial">
+      <h1 class="title">Search For a Movie on Both Sides</h1>
+      <p class="subtitle">We will tell you wich is best!</p>
+    </div>
   </div>
   <script src="utils.js"></script>
   <script src="index.js"></script>
